package lesson_24_gof_patterns_01.livecoding.creational.factory_method;

public interface DataStorage {

    void store(String data);
}
