package lesson_24_gof_patterns_01.livecoding.creational.factory_method;

public enum StorageTypes {
    IN_MEMORY,
    FILE,
    DB
}
